# web-valueist

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_CANDIDATES  RELEASE_WORKFLOW.md  cspell.config.yaml  install.sh  pyproject.toml
.github/workflows/: docs-publish.yml  prepare-release.yml  pypi-publish.yml
.jules/: bolt.md
docs_site/: index.html
tests/: conftest.py  test_cli_parsing.py  test_evaluate.py  test_issue_2.py  test_issue_5.py  test_logging.py  test_new_features.py
tests/unit/: test_cli.py  test_exception.py  test_fetch_values.py  test_generator_logic.py  test_operator.py  test_parser.py  test_quantifier_fallback.py
web_valueist/: __init__.py  __main__.py
web_valueist/lib/: __init__.py  exception.py  operator.py  parser.py
