[tool.poetry]
name = "web-valueist"
version = "1.0.0"
description = ""
authors = ["Andreas Galazis"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"

[tool.poetry.urls]
"Documentation" = "https://web-valueist.csmonk.com/"
"Issues" = "https://github.com/agalazis/web-valueist/issues"
"Source Code" = "https://github.com/agalazis/web-valueist"
"CI" = "https://github.com/agalazis/web-valueist/actions"
"Releases" = "https://github.com/agalazis/web-valueist/releases"

[tool.poetry.scripts]
web_valueist = "web_valueist.__main__:__main__"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
